<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:padding="16dp"
            android:text="@string/choose_primary_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="16dp"
            android:text="@string/choose_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="16dp"
            android:text="@string/choose_accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/l2"
        android:layout_toRightOf="@id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_primary"
            android:text="@string/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_dark"
            android:text="@string/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_accent"
            android:text="@string/accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>